# DaltoBabel

./: .gitignore  README.md
Babel/: Babel.sdf  Babel.sln  CMakeLists.txt
Babel/Babel/: AudioManager.cpp  AudioManager.hh  Babel.vcxproj  IAudioIO.hh  OpusCompressor.cpp  OpusCompressor.hh  PaWin.cpp  PaWin.h  PortAudioIO.cpp  PortAudioIO.hh  PortAudioManager.cpp  PortAudioManager.hh  babel_common.h  main.cpp
Babel/Client_Test/Babel/: Babel  Babel.pro
Babel/Client_Test/Babel/.moc/: moc_chatWindow.cpp  moc_connectWindow.cpp  moc_contactWindow.cpp
Babel/Client_Test/Babel/.ui/: ui_chatWindow.h  ui_connectWindow.h  ui_contactWindow.h
Babel/Client_Test/Babel/Include/Model/: contact.h  myChatModel.h  myConnectModel.h  myContactModel.h  myconnectmodel.cpp
Babel/Client_Test/Babel/Include/Network/: AudioManager.hh  CWCondVar.h  CWThread.hpp  IAudioIO.hh  ICompressor.hh  ICondVar.h  ISocketServer.h  LibC.h  Mutex.h  OpusCompressor.hh  Packet.cpp  Packet.h  PacketFactory.h  PortAudioIO.hh  Socket.hh  SocketAvd.hh  SocketServerTCP.h  SocketServerUDP.h  babel_common.h  network.h
Babel/Client_Test/Babel/Include/Window/: chatWindow.h  connectWindow.h  contactWindow.h
Babel/Client_Test/Babel/Source/: main.cpp
Babel/Client_Test/Babel/Source/Model/: contact.cpp  myChatModel.cpp  myConnectModel.cpp  myContactModel.cpp
Babel/Client_Test/Babel/Source/Network/: AudioManager.cpp  CUCondVar.cpp  CUMutex.cpp  CUSocket.cpp  CWCondVar.cpp  CWMutex.cpp  CWSocket.cpp  CircularBuffer.cpp  CondVar.cpp  Exception.cpp  LibC.cpp  Mutex.cpp  MutexPool.cpp  OpusCompressor.cpp  Packet.cpp  PacketFactory.cpp  PortAudioIO.cpp  SeleKtor.cpp  Socket.cpp  SocketAvd.cpp  SocketClientTCP.cpp  SocketClientUDP.cpp  SocketServerTCP.cpp  TimeStamp.cpp  network.cpp  socketServerUDP.cpp
Babel/Client_Test/Babel/Source/Window/: chatWindow.cpp  chatWindow.ui  connectWindow.cpp  connectWindow.ui  contactWindow.cpp  contactWindow.ui
Babel/Debug/: BabelAudioTest.lib
Babel/Eddy/Babel/: Babel.opensdf  Babel.sln
Babel/Eddy/Babel Server/shared/include/: Account.h  AccountManager.h  CUCondVar.h  CUFolder.h  CUMutex.h  CUThread.hpp  CWFolder.h  CWMutex.h  CircularBuffer.hpp  Folder.h  IFolder.h  IMutex.h  ISocket.hh  ISocketServer.h~  IUser.h  MutexPool.h  Packet.h  Packet.h~  PacketFactory.h  Server.h  SocketAvd.hh  SocketServerTCP.h~  Thread.hpp  TimeStamp.h  User.h  UserCollection.h  Util.hpp
Babel/Eddy/Babel Server/shared/src/: Account.cpp  AccountManager.cpp  CUFolder.cpp  CUMutex.cpp~  CUSocket.cpp  CWCondVar.cpp  CWFolder.cpp  CWMutex.cpp  CWSocket.cpp  CircularBuffer.cpp  Exception.cpp  Folder.cpp  LibC.cpp  Packet.cpp  Packet.cpp~  Server.cpp  SocketAvd.cpp  SocketServerTCP.cpp  SocketServerTCP.cpp~  TimeStamp.cpp  TimeStamp.cpp~  User.cpp  UserCollection.cpp  main.cpp
Babel/Eddy/Babel Server/unix/: Makefile
Babel/Eddy/Babel/Debug/: Server.ilk
Babel/Eddy/Babel/Server/: Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  CircularBuffer.cpp  Contact.cpp  Contact.h  IThread.h  IUser.h  Packet.cpp  Packet.h  PacketFactory.cpp  SeleKtor.cpp  SeleKtor.hh  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  SocketServerTCP.cpp  SocketServerUDP.cpp  TimeStamp.cpp  User.cpp  User.h  UserCollection.cpp  UserCollection.h  main.cpp
Babel/UML/: Abstraction.boo  Abstraction.moo  Client.boo  Client.moo  DaltoBabel.bpj  DaltoBabel.prj  Espace de travail.sws  Server.boo
Babel/client/shared/include/: Util.hpp
Babel/client/shared/src/: main.cpp
Babel/client/unix/: client
Babel/libs/opus/lib32/: celt.lib  opus.lib  silk_fixed.lib
Babel/libs/opus/lib64/: opus.lib  silk_common.lib  silk_float.lib
Babel/libs/portaudio/lib64/: portaudio_x64.lib
Babel/portaudio/lib/: portaudio_x86.lib
Babel/tmp/Abstractions/testSelektor/: SocketServer.sln
Babel/tmp/testPortAudio/: .cproject  .project  ICompressor.hh  OpusCompressor.hh  PortAudioIO.cpp  PortAudioIO.hh
(+89 files in other folders)
